5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1670_2968.log
== TEST (2019-04-16 18:05:43) 
-- CODE:
print(round(5+3.50+4,2))
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:05:51) 
-- CODE:
print(round(5+3.50+4, 2))
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:06:59) 
-- CODE:
print(round("5+3.50+4" 2))
-- ERROR:
File "XXXX", line 1
    print(round("5+3.50+4" 2))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:07:08) 
-- CODE:
print(round("5+3.50+4" ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round("5+3.50+4" ,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:07:20) 
-- CODE:
print(round(5+3.50+4,2))
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:07:25) 
-- CODE:
print(round(5+3.50+4,2))
-- EXECUTION TIME:
0.129419
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
12.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
12.5
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:12:24) 
-- CODE:
int(input(round(5+3,50+4, 2)))
print(int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(round(5+3,50+4, 2)))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:01) 
-- CODE:
int(input(round(5+3,50+4, 2)))
float(int)
print(float)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(round(5+3,50+4, 2)))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:46) 
-- CODE:
L=4
valor= 5
round(5*4 , 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(round(5+3,50+4, 2)))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:13) 
-- CODE:
L=4
valor= 5
round(5*4 , 2)
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:37) 
-- CODE:
L=4
valor= 5
round(5*4 , 2)
print('round')
-- OUTPUT:
round
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:23:43) 
-- CODE:
3*777

-- OUTPUT:
round
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:44) 
-- CODE:
L
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    L
NameError: name 'L' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:55) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:55) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:55) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:55) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:55) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:56) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:56) 
-- CODE:
Lanche
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Lanche
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:30) 
-- CODE:
float(input(Lanche))
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(Lanche))
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:42) 
-- CODE:
float(input(Lanche))
2
1
round(2*3,50+4, 2)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(Lanche))
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:09) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:20) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:35:28) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r,  2))
-- EXECUTION TIME:
0.144208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:10) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r x,2))
-- ERROR:
File "XXXX", line 4
    pint(round(5*l+4*s+3*r x,2))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:20) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:36:53) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r ,2))
-- EXECUTION TIME:
0.161905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:36:56) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r ,2))
-- EXECUTION TIME:
0.159804
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:36:56) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r ,2))
-- EXECUTION TIME:
0.178251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:02) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:16) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
pint(round(5*l+4*s+3*r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:36) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print(round(5*l+4*s+3*r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:10) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print(round(5*l+4*s+3*r ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:38:38) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print(round, 2(5*l+4*s+3*r ))
-- EXECUTION TIME:
0.273922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:40) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print(round, 2(5*l+4*s+3*r ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:16) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(5*l+4*s+3*r ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:34) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(5*l+4*s+3*r ,2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:51) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(5*l+4*s+3*r ,3 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:11) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(5*l+4*s+3*r ,4 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:41) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(5*l+4*s+3*r ,20 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:50) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(5*l+4*s+3*r ,20 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:17) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(7*l+7*s+9*r ,2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:36) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(7*l+7*s+9*r ,2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:50) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(7*l+7*s+9*r ,2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:04) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(7*l+7*s+9*r ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:43:21) 
-- CODE:
l=float(input("digite a:"))
s=float(input("digite b:"))
r=float(input("digite c:"))
print (round(7*l+7*s+9*r ,2))
-- EXECUTION TIME:
0.206434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:20) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:58) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:45:11) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- EXECUTION TIME:
0.131537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:36) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:36) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:43) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:50) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:55) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:12) 
-- CODE:
l=float(input("digite a:"))
print (round(7*l, 2))
-- EXECUTION TIME:
0.132365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:02) 
-- CODE:
s=float(input("digite a:"))
r=float(input("digite b:"))
print (round(7*s+3*r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:31) 
-- CODE:
s=float(input("digite a:"))
r=float(input("digite b:"))
print (round(7*s+9*r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:48:55) 
-- CODE:
s=float(input("digite a:"))
r=float(input("digite b:"))
print (round(7*s+9*r, 2))
-- EXECUTION TIME:
0.189109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:01) 
-- CODE:
s=float(input("digite a:"))
r=float(input("digite b:"))
print (round(7*s+9*r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:51) 
-- CODE:
s=float(input("digite s:"))
r=float(input("digite r:"))
print (round(7*s+9*r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:53:32) 
-- CODE:
s=float(input("digite s:"))
r=float(input("digite r:"))
print (round(98*s+99*r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:53:43) 
-- CODE:
s=float(input("digite s:"))
r=float(input("digite r:"))
print (round(98*s+99*r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
